# async_lib

./: .bazelrc  .clang-format  .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE  run.sh  run_clang_format.sh  run_include_what_you_use.sh
async/: CMakeLists.txt  README.md  SConscript
async/concurrent/: BUILD  CMakeLists.txt  SConscript  blocking_work_queue.h  concurrent_work_queue.cpp  concurrent_work_queue.h  environment.h  event_count.h  multi_threaded_work_queue.cpp  non_blocking_work_queue.h  task_deque.h  task_priority_queue.h  task_queue.cpp  task_queue.h  work_queue_base.h
async/context/: BUILD  CMakeLists.txt  SConscript  async_value.cpp  async_value.h  async_value_ref.cpp  async_value_ref.h  chain.h  diagnostic.cpp  diagnostic.h  execution_context.h  function.cpp  function.h  host_allocator.cpp  host_allocator.h  host_buffer.cpp  host_buffer.h  host_context.cpp  host_context.h  host_context_ptr.cpp  host_context_ptr.h  kernel_frame.h  location.h  native_function.cpp  native_function.h  profiled_allocator.cpp  resource.h  single_threaded_work_queue.cpp  task_function.h
async/coroutine/: BUILD  CMakeLists.txt  blocking_coroutine_queue.h  coroutine_func.h  coroutine_notifier.h  coroutine_queue_traits.h  coroutine_task_deque.cpp  coroutine_task_deque.h  coroutine_task_list.h  coroutine_task_queue.cpp  coroutine_task_queue.h  coroutine_test.cpp  coroutine_thread_pool.cpp  coroutine_thread_pool.h  coroutine_traits.h  coroutine_wait.h  coroutine_waitable_task.h  coroutine_work_queue_base.h  fmap.h  non_blocking_coroutine_queue.h  schedule.h  shared_task.h  task.h  when_all.h  when_all_ready.h
async/coroutine/internal/: awaiter_traits.h  data_types.h  fmap.h  void_value.h  when_all.h  when_all_counter.h  when_all_ready_awaitable.h  when_all_task.h
async/coroutine/tests/: coroutine_test.cpp  coroutine_thread_pool_test.cpp  when_all_test.cpp
async/device/: SConscript
async/device/gpu/: SConscript
async/device/gpu/memory/: SConscript  device_memory.cpp  device_memory.h  gpu_allocator.cpp  gpu_allocator.h  gpu_buffer.cpp  gpu_buffer.h
async/device/gpu/stream/: stream.h
async/integration_test/: BUILD  CMakeLists.txt  end2end_test_async_graph.cpp  end2end_test_task_graph.cpp  end2end_test_v1.cpp  openmp_function_test.cpp  openmp_perf_compare.cpp
async/runtime/: BUILD  CMakeLists.txt  SConscript  async_kernel.cpp  async_kernel.h  base_runtime.cpp  base_runtime.h  batch_task.h  function_op.h  graph.cpp  graph.h  handler.h  register.cpp  register.h  task_graph.cpp  task_graph.h
async/runtime/proto/: BUILD  graph.proto  node.proto
async/support/: BUILD  CMakeLists.txt  SConscript  alloc.cpp  alloc.h  concurrent_vector.h  extra_structure.h  function_ref.h  latch.h  rc_array.h  ref_count.cpp  ref_count.h  span.h  status.h  string_util.cpp  string_util.h  task_function.h  thread_local.h  type_traits.h  unique_function.h
async/tensor/: tensor.h  tensor_type_register.h
async/tests/: BUILD  CMakeLists.txt  SConscript  allocator_unittest.cpp  any_unittest.cpp  base_benchmark_test.cpp  function_ref_unittest.cpp  function_unittest.cpp  latch_unittest.cpp  register_kernel_unittest.cpp  resource_unittest.cpp  span_unittest.cpp  std_function_unittest.cpp  string_util_unittest.cpp  task_deque_unittest.cpp  task_priority_queue_unittest.cpp  task_queue_unittest.cpp  test_async_speed.cpp  trace_unittest.cpp  unique_function_unittest.cpp
async/trace/: BUILD  CMakeLists.txt  SConscript  simple_tracing.cpp  simple_tracing.h  tracing.cpp  tracing.h  tracing_manager.cpp  tracing_manager.h
documents/: CodeStructure.md  Compile.md  HowToRunAGraph.md  HowToSimpleUseHostContext.md  HowToUseClangTools.md  HowToUseCoroutine.md
scripts/: build.sh  clean.sh  gen_compdb.sh  test.sh
tools/: BUILD  CMakeLists.txt  parallel_output_hello_world.cpp
tools/client_session/: BUILD  client_session.cpp  sample_client.cpp  sample_client.h
tools/data/: BUILD  config.pb.txt  graph2.pb.txt  graph3.pb
tools/proto/: BUILD  config.proto  message.proto
tools/visualize/: BUILD  graph_pb2.py  node_pb2.py  visualize_graph.py
tools/worker/: BUILD  sample_worker.cpp
