file(GLOB header_files "*.h")
file(GLOB object_files "*.cpp")
add_library(async_concurrent ${LIB_TYPE} ${header_files} ${object_files})
target_precompile_headers(async_concurrent PRIVATE ${header_files})
target_link_libraries(async_concurrent absl::strings absl::optional absl::container absl::hash absl::raw_hash_set)
