file(GLOB header_files "*.h")
file(GLOB object_files "*.cpp")
add_library(async_context ${LIB_TYPE} ${object_files})
target_link_libraries(async_context PUBLIC async_support async_concurrent)
target_precompile_headers(async_context PRIVATE ${header_files})
set_target_properties(async_context PROPERTIES PUBLIC_HEADER "${header_files}")
