file(GLOB header_files "*.h")
file(GLOB object_files "*.cpp")
add_library(async_coroutine ${LIB_TYPE} ${object_files})
target_precompile_headers(async_coroutine PRIVATE ${header_files})
add_executable(coroutine_test tests/coroutine_test.cpp)
target_link_libraries(coroutine_test async_coroutine)
add_executable(coroutine_thread_pool_test tests/coroutine_thread_pool_test.cpp)
target_link_libraries(coroutine_thread_pool_test async_coroutine)

add_test(NAME test_coroutine COMMAND coroutine_test)
add_test(NAME test_coroutine_thread_pool COMMAND coroutine_thread_pool_test)