add_executable(end2end_test_async_graph end2end_test_async_graph.cpp)
target_link_libraries(end2end_test_async_graph PRIVATE async_runtime)
add_executable(end2end_test_task_graph end2end_test_task_graph.cpp)
target_link_libraries(end2end_test_task_graph PRIVATE async_runtime)
add_executable(openmp_perf_compare openmp_perf_compare)
target_link_libraries(openmp_perf_compare PRIVATE async_runtime gtest_main)
target_compile_options(openmp_perf_compare PRIVATE -fopenmp)
target_link_options(openmp_perf_compare PRIVATE -fopenmp)
add_executable(openmp_function_test openmp_function_test.cpp)
target_compile_options(openmp_function_test PRIVATE -fopenmp)
target_link_options(openmp_function_test PRIVATE -fopenmp)