set(libs_for_test async_context async_trace async_concurrent async_support gtest_main tinfo)


add_executable(test_any any_unittest.cpp)
target_link_libraries(test_any PRIVATE ${libs_for_test})
add_executable(test_function function_unittest.cpp)
target_link_libraries(test_function PRIVATE ${libs_for_test})
add_executable(test_latch latch_unittest.cpp)
target_link_libraries(test_latch PRIVATE ${libs_for_test})
add_executable(test_resource resource_unittest.cpp)
target_link_libraries(test_resource PRIVATE ${libs_for_test})
add_executable(test_std_function std_function_unittest.cpp)
target_link_libraries(test_std_function PRIVATE ${libs_for_test})
add_executable(test_string_util string_util_unittest.cpp)
target_link_libraries(test_string_util PRIVATE ${libs_for_test})
add_executable(test_trace trace_unittest.cpp)
target_link_libraries(test_trace PRIVATE ${libs_for_test})

add_test(NAME any COMMAND test_any)
add_test(NAME function COMMAND test_function)
add_test(NAME latch COMMAND test_latch)
add_test(NAME resource COMMAND test_resource)
add_test(NAME std_function COMMAND test_std_function)
add_test(NAME string_util COMMAND test_string_util)
add_test(NAME trace COMMAND test_trace)