set(libs_for_test async_context async_trace async_concurrent async_support gtest_main)


add_executable(test_function function_unittest.cpp)
target_link_libraries(test_function PRIVATE ${libs_for_test})
add_executable(test_latch latch_unittest.cpp)
target_link_libraries(test_latch PRIVATE ${libs_for_test})
add_executable(test_resource resource_unittest.cpp)
target_link_libraries(test_resource PRIVATE ${libs_for_test})
add_executable(test_string_util string_util_unittest.cpp)
target_link_libraries(test_string_util PRIVATE ${libs_for_test})
add_executable(test_trace trace_unittest.cpp)
target_link_libraries(test_trace PRIVATE ${libs_for_test})
add_executable(test_async_speed test_async_speed.cpp)
target_link_libraries(test_async_speed PRIVATE ${libs_for_test})
add_executable(test_unique_function unique_function_unittest.cpp)
target_link_libraries(test_unique_function PRIVATE ${libs_for_test})
add_executable(test_task_deque task_deque_unittest.cpp)
target_link_libraries(test_task_deque PRIVATE ${libs_for_test})
add_executable(test_task_queue task_queue_unittest.cpp)
target_link_libraries(test_task_queue PRIVATE ${libs_for_test})

add_test(NAME any COMMAND test_any)
add_test(NAME function COMMAND test_function)
add_test(NAME latch COMMAND test_latch)
add_test(NAME resource COMMAND test_resource)
add_test(NAME string_util COMMAND test_string_util)
add_test(NAME trace COMMAND test_trace)
add_test(NAME unique_function COMMAND test_unique_function)
add_test(NAME task_deque COMMAND test_task_deque)
add_test(NAME task_queue COMMAND test_task_queue)